2025-06-20T02:08:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15769659579 # 1049
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-20
* notice: last 14d: unq all: 16 41
* notice: prev accum: outdated-unq outdated-all / unq all: 1113 5613 / 1128 5651
* notice: next accum: outdated-unq outdated-all / unq all: 1113 5613 / 1130 5654
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2025-06-19]

2025-06-19T12:54:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15758369912 # 1048
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-19
* notice: last 14d: unq all: 14 38
* notice: prev accum: outdated-unq outdated-all / unq all: 1113 5613 / 1127 5649
* notice: next accum: outdated-unq outdated-all / unq all: 1113 5613 / 1128 5651
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-06-19]

2025-06-19T02:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15747722759 # 1047
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-19
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1111 5593 / 1127 5649
* notice: next accum: outdated-unq outdated-all / unq all: 1113 5613 / 1127 5649
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-06-04] / []

2025-06-18T02:08:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15722215681 # 1045