@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-20T02:08:11Z",
+  "timestamp" : "2025-06-21T02:05:42Z",
   "count_outdated" : 5613,
   "uniques_outdated" : 1113,
-  "count" : 5654,
-  "uniques" : 1130,
+  "count" : 5655,
+  "uniques" : 1131,
   "views" : [
     {
       "timestamp": "2025-06-09T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-06-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
