@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 42,
   "uniques": 16,
   "views": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2025-06-19T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-06-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
